@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+2/28/18
+ - graph font smaller for linux so title can fit in 
+
 2/22/18
  - adding true infos for background hits
 
